# bulletin_board

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md
lib/: simple_message_server_logic
lib/libsimple_message_client_commandline_handling/: Makefile  global.mak
lib/simple_message_server_logic/: Makefile  content_entry_with_img.thtml.h  content_entry_without_img.thtml.h  error.png.h  global.mak  ok.png.h  simple_message_server_logic.c  vcs_tcpip_bulletin_board.php.h  vcs_tcpip_bulletin_board_response_error.thtml.h  vcs_tcpip_bulletin_board_response_ok.thtml.h
src/: simple_message_client.c  simple_message_server.c  smc_commandline_handling.h  std_check.c
